SFD/BMD Charts updated to new style